@@ -9,6 +9,8 @@
 	- Make ./configure slightly be more verbose
 	- Code cleanup (nonconst->const/mutable, prefer prefix ++/--, headers,
 	  use localeC cctype, configure.in->configure.ac, mvmacros)
+	- Fix WEAKER detection in -T/eix-test-obsolete which was apparently
+	  broken since many versions...
 	- Fix: Do not use obsoleted {markedversions} in the defaults.
 	- Introduce {havemarkedversion}.
 	- Fix some segfaults when unknown attributes are used by mistake.
